# ForkReplay

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  READINESS-GATE-REPORT.md  README.md  SECURITY.md  agent-trace-fork-prd.md  competitive_analysis.md  implementation-plan.md  implementation-readiness-spec.md  package.json  pnpm-workspace.yaml  pyproject.toml
.claude/skills/complete-milestone/: SKILL.md
.claude/skills/complete-milestone/references/: issue-execution.md  orchestration.md  review-merge-validate.md
.codex/skills/: docs-update.md
.github/workflows/: docs-drift-check.yml
apps/web/: AGENTS.md  README.md  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
docs/: README.md
docs/architecture/: README.md  db-mode-matrix.md  service-responsibilities.md
docs/architecture/api-surface/: endpoint-inventory.md
docs/architecture/deployment-modes/: abstraction-layers.md  deploy-outline.md
docs/architecture/milestones/: issue-list.md
docs/architecture/orchestration/: temporal-workflows.md
docs/architecture/schemas/: clickhouse.md  control-plane.md
docs/architecture/sdk/: python-package-outline.md
docs/deployment/: architecture.md  configuration.md  docker-compose.md  helm.md  terraform-aws.md  terraform-azure.md
docs/operations/: provisioning-template.md
sdk/python/: AGENTS.md  README.md  pyproject.toml
sdk/python/src/forkreplay/: __init__.py
services/api/: AGENTS.md  Dockerfile  pyproject.toml
services/api/app/: __init__.py  main.py
services/billing-batch-worker/: AGENTS.md  pyproject.toml
services/billing-batch-worker/app/: __init__.py  main.py
services/export-worker/: AGENTS.md  pyproject.toml
services/export-worker/app/: __init__.py  main.py
services/ingest/: AGENTS.md  pyproject.toml
services/ingest/app/: __init__.py  main.py
services/mock-gen-worker/: AGENTS.md  Dockerfile  pyproject.toml
services/mock-gen-worker/app/: __init__.py  main.py
services/replay-worker/: AGENTS.md  pyproject.toml
services/replay-worker/app/: __init__.py  main.py
tests/architecture/: check_02_service_responsibilities.py  check_03_schema_sketches.py  check_04_endpoint_inventory.py  check_05_temporal_workflows.py  check_06_sdk_outline.py  check_07_deploy_outline.py  check_08_milestone_list.py
workers/otlp-gateway/: AGENTS.md  package.json  tsconfig.json  wrangler.toml
workers/otlp-gateway/src/: index.ts
workers/sse-relay/: AGENTS.md  package.json  wrangler.toml
workers/sse-relay/src/: index.ts
workflows/cloudflare/: AGENTS.md  package.json  wrangler.toml
workflows/cloudflare/src/: index.ts
