[project]
name = "forkreplay-sdk"
version = "0.0.1"
description = "ForkReplay Python SDK — OTLP emitter plus framework adapters."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
auto = [
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-instrumentation>=0.48b0",
]
langgraph = ["langgraph>=0.2"]
claude = ["anthropic>=0.39"]
openai-agents = ["openai-agents>=0.0.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forkreplay"]
