[project]
name = "forkreplay-billing-batch-worker"
version = "0.0.1"
description = "Refund batches, MRR rollup, reconciliation alarms, and Supabase Pro auto-upgrade."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "stripe>=9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
