[project]
name = "forkreplay-mock-gen-worker"
version = "0.0.1"
description = "AI-mock generation worker for replay substitutions."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
